--- a/application.properties
+++ b/application.properties
@@ -1,17 +1,21 @@
 spring.application.name=jobtracker
 
 # PostgreSQL DB config
-#the JDBC URL tells the app where the db lives (host,port,db name)
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
-#	The JDBC driver class Hibernate uses to connect to the DB (org.postgresql.Driver).
 spring.datasource.driver-class-name=org.postgresql.Driver
-#— Spring Boot uses this info to open a connection to your PostgreSQL server on localhost, port 5432, database jobtrackerdb.
-
-
 
 # Hibernate (JPA) config
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# CORS Configuration
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173,http://localhost:3000}
+
+# Server configuration for production
+server.port=${PORT:8080}
+
+# Logging
+logging.level.org.springframework.web.cors=DEBUG
